2014-04-10 Torvald Riegel  <triegel@redhat.com>

	* benchtests/pthread_once-inputs: New file.
	* benchtests/pthread_once-source.c: New file.
	* benchtests/README: Update documentation.

2014-04-09  Igor Zamyatin  <igor.zamyatin@intel.com>
	    H.J. Lu  <hongjiu.lu@intel.com>

	* config.h.in (HAVE_MPX_SUPPORT): New #undef.
	* sysdeps/x86_64/configure.ac: Set HAVE_MPX_SUPPORT.
	* sysdeps/x86_64/configure: Regenerated.
	* sysdeps/x86_64/dl-trampoline.S (REGISTER_SAVE_AREA): New
	macro.
	(REGISTER_SAVE_RAX): Likewise.
	(REGISTER_SAVE_RCX): Likewise.
	(REGISTER_SAVE_RDX): Likewise.
	(REGISTER_SAVE_RSI): Likewise.
	(REGISTER_SAVE_RDI): Likewise.
	(REGISTER_SAVE_R8): Likewise.
	(REGISTER_SAVE_R9): Likewise.
	(REGISTER_SAVE_BND0): Likewise.
	(REGISTER_SAVE_BND1): Likewise.
	(REGISTER_SAVE_BND2): Likewise.
	(_dl_runtime_resolve): Use them.  Save and restore Intel MPX
	bound registers when calling _dl_fixup.

2014-04-09  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* bits/string.h (_STRING_ARCH_unaligned): Define it to 0.
	* crypt/sha256.c (_STRING_ARCH_unaligned): Check its value instead of its
	definition.
	* iconv/gconv_simple.c (_STRING_ARCH_unaligned): Likewise.
	* iconv/loop.c (_STRING_ARCH_unaligned): Likewise.
	* iconv/skeleton.c (_STRING_ARCH_unaligned): Likewise.
	* nscd/nscd_gethst_r.c (_STRING_ARCH_unaligned): Likewise.
	* nscd/nscd_getserv_r.c (_STRING_ARCH_unaligned): Likewise.
	* nscd/nscd_helper.c (_STRING_ARCH_unaligned): Likewise.
	* resolv/res_send.c (_STRING_ARCH_unaligned): Likewise.

2014-04-09  Peter Brett  <peter@peter-b.co.uk>

	[BZ #15514]
	* sysdeps/posix/pathconf.c (__pathconf): Use statvfs64() for
	pathconf(_PC_NAME_MAX).

2014-04-09  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* nptl/sysdeps/pthread/pthread.h (__PTHREAD_MUTEX_HAVE_ELISION):
	Remove macro usage.
	(__PTHREAD_SPINS): Move definition to ...
	* nptl/sysdeps/unix/sysv/linux/powerpc/bits/pthreadtypes.h
	(__PTHREAD_SPINS): ... here.