@@ -1,3 +1,9 @@
+2014-04-11  Will Newton  <will.newton@linaro.org>
+
+	* malloc/malloc.c [!MALLOC_DEBUG]: #define MALLOC_DEBUG
+	to zero if it is not defined elsewhere.  (mtrim): Test
+	the value of MALLOC_DEBUG with #if rather than #ifdef.
+
 2014-04-10 Torvald Riegel  <triegel@redhat.com>
 
 	* benchtests/pthread_once-inputs: New file.
